--- a/schemas/dm_unidade_orc.yaml
+++ b/schemas/dm_unidade_orc.yaml
@@ -7,6 +7,14 @@ fields:
     constraints:
       required: true
       unique: false
+  - name: sqa_unidade_orcam
+    title: Unidade Orçamentária - Chave Origem
+    type: integer
+    format: default
+    bareNumber: true
+    constraints:
+      required: true
+      unique: false
   - name: ano_exercicio
     title: Ano de Exercício
     type: integer
@@ -62,6 +70,10 @@ fields:
      Nome completo da Unidade Orçamentária.
     constraints:
       required: true
+  - name: sigla
+    title: Unidade Orçamentária - Sigla
+    type: string
+    format: default
 missingValues:
   - ''
 primaryKey:
