--- a/datasets/convenios_entrada/datapackage.yaml
+++ b/datasets/convenios_entrada/datapackage.yaml
@@ -1,21 +1,82 @@
-profile: tabular-data-package
-name:
-title:
-description:
-owner_org: controladoria-geral-do-estado-cge
-version:
-keywords:
-private: false
-state: active
-sources:
+contributors:
+  email: transparencia@cge.mg.gov.br
+  path: https://cge.mg.gov.br/a-cge/quem-e-quem/subcontroladoria-de-transparencia-e-integridade
+  role: publisher
+  title: Diretoria Central de Transparência Ativa
+description: null
+keywords: null
 licences:
   name: CC-BY-4.0
-  title: Creative Commons Attribution 4.0
   path: https://creativecommons.org/licenses/by/4.0/
-contributors:
-  title: Diretoria Central de Transparência Ativa
-  path: https://cge.mg.gov.br/a-cge/quem-e-quem/subcontroladoria-de-transparencia-e-integridade
-  email: transparencia@cge.mg.gov.br
-  role: publisher
+  title: Creative Commons Attribution 4.0
+name: null
+owner_org: controladoria-geral-do-estado-cge
+private: false
+profile: tabular-data-package
 resources:
-
+- name: ft_convenio_entrada_dotacao
+  path: data/ft_convenio_entrada_dotacao.csv.gz
+- name: dm_concedente
+  path: data/dm_concedente.csv.gz
+- name: dm_convenio_entrada
+  path: data/dm_convenio_entrada.csv.gz
+- name: dm_elemento_desp
+  path: data/dm_elemento_desp.csv.gz
+- name: dm_orgao_proponente
+  path: data/dm_orgao_proponente.csv.gz
+- name: dm_programa_conv_ent
+  path: data/dm_programa_conv_ent.csv.gz
+- name: dm_tempo_diario
+  path: data/dm_tempo_diario.csv.gz
+- name: dm_unidade_orc
+  path: data/dm_unidade_orc.csv.gz
+- name: ft_convenio_entrada
+  path: data/ft_convenio_entrada.csv.gz
+- name: dm_concedente
+  path: data/dm_concedente.csv.gz
+- name: dm_convenio_entrada
+  path: data/dm_convenio_entrada.csv.gz
+- name: dm_orgao_proponente
+  path: data/dm_orgao_proponente.csv.gz
+- name: dm_situacao_conv_ent
+  path: data/dm_situacao_conv_ent.csv.gz
+- name: dm_tempo_diario
+  path: data/dm_tempo_diario.csv.gz
+- name: dm_unidade_orc
+  path: data/dm_unidade_orc.csv.gz
+- name: ft_convenio_entrada_desp
+  path: data/ft_convenio_entrada_desp.csv.gz
+- name: dm_convenio_entrada
+  path: data/dm_convenio_entrada.csv.gz
+- name: dm_elemento_desp
+  path: data/dm_elemento_desp.csv.gz
+- name: dm_favorecido
+  path: data/dm_favorecido.csv.gz
+- name: dm_item_desp
+  path: data/dm_item_desp.csv.gz
+- name: dm_tipo_documento
+  path: data/dm_tipo_documento.csv.gz
+- name: ft_convenio_entrada_rec
+  path: data/ft_convenio_entrada_rec.csv.gz
+- name: dm_classifica_rec
+  path: data/dm_classifica_rec.csv.gz
+- name: dm_convenio_entrada
+  path: data/dm_convenio_entrada.csv.gz
+- name: fl_convenio_entrada_interv
+  path: data/fl_convenio_entrada_interv.csv.gz
+- name: dm_convenio_entrada
+  path: data/dm_convenio_entrada.csv.gz
+- name: dm_interveniente_conv_ent
+  path: data/dm_interveniente_conv_ent.csv.gz
+- name: fl_convenio_entrada_compras
+  path: data/fl_convenio_entrada_compras.csv.gz
+- name: dm_convenio_entrada
+  path: data/dm_convenio_entrada.csv.gz
+- name: fl_convenio_entrada_aditivo
+  path: data/fl_convenio_entrada_aditivo.csv.gz
+- name: dm_convenio_entrada
+  path: data/dm_convenio_entrada.csv.gz
+sources: null
+state: active
+title: null
+version: null
