--- a/datasets/despesa-com-pessoal/datapackage.yaml
+++ b/datasets/despesa-com-pessoal/datapackage.yaml
@@ -1,21 +1,28 @@
-profile: tabular-data-package
-name:
-title:
-description:
-owner_org: controladoria-geral-do-estado-cge
-version:
-keywords:
-private: false
-state: active
-sources:
+contributors:
+  email: transparencia@cge.mg.gov.br
+  path: https://cge.mg.gov.br/a-cge/quem-e-quem/subcontroladoria-de-transparencia-e-integridade
+  role: publisher
+  title: Diretoria Central de Transparência Ativa
+description: null
+keywords: null
 licences:
   name: CC-BY-4.0
-  title: Creative Commons Attribution 4.0
   path: https://creativecommons.org/licenses/by/4.0/
-contributors:
-  title: Diretoria Central de Transparência Ativa
-  path: https://cge.mg.gov.br/a-cge/quem-e-quem/subcontroladoria-de-transparencia-e-integridade
-  email: transparencia@cge.mg.gov.br
-  role: publisher
+  title: Creative Commons Attribution 4.0
+name: null
+owner_org: controladoria-geral-do-estado-cge
+private: false
+profile: tabular-data-package
 resources:
-
+- name: ft_pessoal_desp
+  path: data/ft_pessoal_desp.csv.gz
+- name: dm_poder
+  path: data/dm_poder.csv.gz
+- name: dm_tempo_mensal
+  path: data/dm_tempo_mensal.csv.gz
+- name: dm_unidade_orc
+  path: data/dm_unidade_orc.csv.gz
+sources: null
+state: active
+title: null
+version: null
