--- a/datasets/despesa/datapackage.yaml
+++ b/datasets/despesa/datapackage.yaml
@@ -1,21 +1,58 @@
-profile: tabular-data-package
-name:
-title:
-description:
-owner_org: controladoria-geral-do-estado-cge
-version:
-keywords:
-private: false
-state: active
-sources:
+contributors:
+  email: transparencia@cge.mg.gov.br
+  path: https://cge.mg.gov.br/a-cge/quem-e-quem/subcontroladoria-de-transparencia-e-integridade
+  role: publisher
+  title: Diretoria Central de Transparência Ativa
+description: null
+keywords: null
 licences:
   name: CC-BY-4.0
-  title: Creative Commons Attribution 4.0
   path: https://creativecommons.org/licenses/by/4.0/
-contributors:
-  title: Diretoria Central de Transparência Ativa
-  path: https://cge.mg.gov.br/a-cge/quem-e-quem/subcontroladoria-de-transparencia-e-integridade
-  email: transparencia@cge.mg.gov.br
-  role: publisher
+  title: Creative Commons Attribution 4.0
+name: null
+owner_org: controladoria-geral-do-estado-cge
+private: false
+profile: tabular-data-package
 resources:
-
+- name: ft_despesa
+  path: data/ft_despesa.csv.gz
+- name: dm_acao
+  path: data/dm_acao.csv.gz
+- name: dm_categ_econ
+  path: data/dm_categ_econ.csv.gz
+- name: dm_elemento_desp
+  path: data/dm_elemento_desp.csv.gz
+- name: dm_empenho_desp
+  path: data/dm_empenho_desp.csv.gz
+- name: dm_favorecido
+  path: data/dm_favorecido.csv.gz
+- name: dm_fonte
+  path: data/dm_fonte.csv.gz
+- name: dm_funcao_desp
+  path: data/dm_funcao_desp.csv.gz
+- name: dm_grupo_desp
+  path: data/dm_grupo_desp.csv.gz
+- name: dm_item_desp
+  path: data/dm_item_desp.csv.gz
+- name: dm_modalidade_aplic
+  path: data/dm_modalidade_aplic.csv.gz
+- name: dm_procedencia
+  path: data/dm_procedencia.csv.gz
+- name: dm_programa
+  path: data/dm_programa.csv.gz
+- name: dm_subfuncao_desp
+  path: data/dm_subfuncao_desp.csv.gz
+- name: dm_tempo_diario
+  path: data/dm_tempo_diario.csv.gz
+- name: dm_tipo_documento
+  path: data/dm_tipo_documento.csv.gz
+- name: dm_unidade_orc
+  path: data/dm_unidade_orc.csv.gz
+- name: fl_despesa_pgto
+  path: data/fl_despesa_pgto.csv.gz
+- name: dm_situacao_op_desp
+  path: data/dm_situacao_op_desp.csv.gz
+sources: null
+state: active
+title: null
+version: null
