--- a/datasets/proposta-lei-orcamentaria/datapackage.yaml
+++ b/datasets/proposta-lei-orcamentaria/datapackage.yaml
@@ -1,21 +1,98 @@
-profile: tabular-data-package
-name:
-title:
-description:
-owner_org: controladoria-geral-do-estado-cge
-version:
-keywords:
-private: false
-state: active
-sources:
+contributors:
+  email: transparencia@cge.mg.gov.br
+  path: https://cge.mg.gov.br/a-cge/quem-e-quem/subcontroladoria-de-transparencia-e-integridade
+  role: publisher
+  title: Diretoria Central de Transparência Ativa
+description: null
+keywords: null
 licences:
   name: CC-BY-4.0
-  title: Creative Commons Attribution 4.0
   path: https://creativecommons.org/licenses/by/4.0/
-contributors:
-  title: Diretoria Central de Transparência Ativa
-  path: https://cge.mg.gov.br/a-cge/quem-e-quem/subcontroladoria-de-transparencia-e-integridade
-  email: transparencia@cge.mg.gov.br
-  role: publisher
+  title: Creative Commons Attribution 4.0
+name: null
+owner_org: controladoria-geral-do-estado-cge
+private: false
+profile: tabular-data-package
 resources:
-
+- name: ft_orcamento_proposta
+  path: data/ft_orcamento_proposta.csv.gz
+- name: dm_acao_orcam
+  path: data/dm_acao_orcam.csv.gz
+- name: dm_categ_econ_orcam
+  path: data/dm_categ_econ_orcam.csv.gz
+- name: dm_fonte_orcam
+  path: data/dm_fonte_orcam.csv.gz
+- name: dm_funcao_orcam
+  path: data/dm_funcao_orcam.csv.gz
+- name: dm_grupo_orcam
+  path: data/dm_grupo_orcam.csv.gz
+- name: dm_indic_acao_orcam
+  path: data/dm_indic_acao_orcam.csv.gz
+- name: dm_modal_aplic_orcam
+  path: data/dm_modal_aplic_orcam.csv.gz
+- name: dm_orgao_orcam
+  path: data/dm_orgao_orcam.csv.gz
+- name: dm_procedencia_orcam
+  path: data/dm_procedencia_orcam.csv.gz
+- name: dm_programa_orcam
+  path: data/dm_programa_orcam.csv.gz
+- name: dm_subfuncao_orcam
+  path: data/dm_subfuncao_orcam.csv.gz
+- name: dm_tempo_anual
+  path: data/dm_tempo_anual.csv.gz
+- name: ft_orcamento_emenda
+  path: data/ft_orcamento_emenda.csv.gz
+- name: dm_autor_emenda
+  path: data/dm_autor_emenda.csv.gz
+- name: dm_emenda_orcam
+  path: data/dm_emenda_orcam.csv.gz
+- name: dm_tempo_anual
+  path: data/dm_tempo_anual.csv.gz
+- name: ft_orcamento_cred_alt
+  path: data/ft_orcamento_cred_alt.csv.gz
+- name: dm_acao
+  path: data/dm_acao.csv.gz
+- name: dm_categ_econ
+  path: data/dm_categ_econ.csv.gz
+- name: dm_decreto
+  path: data/dm_decreto.csv.gz
+- name: dm_fonte
+  path: data/dm_fonte.csv.gz
+- name: dm_funcao_desp
+  path: data/dm_funcao_desp.csv.gz
+- name: dm_grupo_desp
+  path: data/dm_grupo_desp.csv.gz
+- name: dm_indicador_acao
+  path: data/dm_indicador_acao.csv.gz
+- name: dm_modalidade_aplic
+  path: data/dm_modalidade_aplic.csv.gz
+- name: dm_procedencia
+  path: data/dm_procedencia.csv.gz
+- name: dm_programa
+  path: data/dm_programa.csv.gz
+- name: dm_subfuncao_desp
+  path: data/dm_subfuncao_desp.csv.gz
+- name: dm_tempo_anual
+  path: data/dm_tempo_anual.csv.gz
+- name: dm_unidade_orc
+  path: data/dm_unidade_orc.csv.gz
+- name: sa_indicador_acao
+  path: data/sa_indicador_acao.csv.gz
+- name: ft_obra
+  path: data/ft_obra.csv.gz
+- name: dm_municipio_obra
+  path: data/dm_municipio_obra.csv.gz
+- name: dm_obra
+  path: data/dm_obra.csv.gz
+- name: dm_orgao_obra
+  path: data/dm_orgao_obra.csv.gz
+- name: dm_situacao_obra
+  path: data/dm_situacao_obra.csv.gz
+- name: dm_tempo_anual
+  path: data/dm_tempo_anual.csv.gz
+- name: dm_territorio_planeja
+  path: data/dm_territorio_planeja.csv.gz
+sources: null
+state: active
+title: null
+version: null
